--- a/Neocom.WebUI/src/app/components/spinner-central/spinner-central.component.html
+++ b/Neocom.WebUI/src/app/components/spinner-central/spinner-central.component.html
@@ -1,9 +1,6 @@
 <div>
   <div class="spinner-position">
-    <span>{{getTitle()}}<br>Waiting:
-      <!-- {{myDate | amTimeAgo:true}} -->
-      <!-- <timer interval="1000">{{minutes}}:{{seconds}}</timer> -->
-    </span>
+    <span>{{getTitle()}}<br>Waiting: {{getWaitingTime() | date:'mm:ss'}} secs</span>
     <span class="spinner-in spinner-size60"></span>
     <div class="spinner-out spinner-size70 spinner-red"></div>
   </div>
